--- a/views/detail.html
+++ b/views/detail.html
@@ -1,18 +1,18 @@
-<h1>Đây là trang thêm mới</h1>
+<h1>Đây là trang chi tiết</h1>
 <form>
     <div>
         <label for="" class="form-label">Name</label>
-        <input type="text" class="form-control" ng-model="inputValue.name">
+        <input type="text" class="form-control" ng-model="product.name" disabled>
     </div>
     <div>
         <label for="" class="form-label">Description</label>
-        <input type="text" class="form-control" ng-model="inputValue.description">
+        <input type="text" class="form-control" ng-model="product.description" disabled>
     </div>
     <div>
         <label for="" class="form-label">Price</label>
-        <input type="number" class="form-control" ng-model="inputValue.price">
+        <input type="number" class="form-control" ng-model="product.price" disabled> 
     </div>
-    <center>
+    <!-- <center>
         <button type="button" class="btn btn-primary mt-2" ng-click="onSubmit()">Thêm mới</button>
-    </center>
+    </center> -->
 </form>
