--- a/views/list.html
+++ b/views/list.html
@@ -13,7 +13,7 @@
         <td>{{product.description}}</td>
         <td>{{product.price}}</td>
         <td>
-            <button class="btn btn-success">Chi tiết</button>
+            <button class="btn btn-success" ng-click="onDetail(product.id)">Chi tiết</button>
             <button class="btn btn-warning">Sửa</button>
         </td>
     </tr>
